fix(mongoDB): Fixed mongodb find
MongoDB find fixed. Classes formated too

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,21 +3,20 @@
     "display": "Node 12",
     "compileOnSave": true,
     "compilerOptions": {
-      "module": "es2015",
       "target": "es5",
       "moduleResolution": "node",
       "rootDir": "./src",
       "outDir": "./dist",
-      "composite": true,
-      "declaration": true,
-      "declarationMap": true,
-      "sourceMap": true,
+      "composite": false,
+      "declaration": false,
+      "declarationMap": false,
+      "sourceMap": false,
       "strict": true,
       "alwaysStrict": true,
       "resolveJsonModule": false,
       "esModuleInterop": true,
-      "noImplicitAny": true,
-      "noImplicitReturns": true,
+      "noImplicitAny": false,
+      "noImplicitReturns": false,
       "importHelpers": true,
       "removeComments": false,
       "skipLibCheck": true,
