--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile:config": "tsc -p ./tsconfig.json",
-    "compile": "tsc"
+    "compile": "tsc",
+    "execute": "node ./dist/index.js"
   },
   "author": "Ignacio Ribera Diaz",
   "license": "ISC",
   "dependencies": {
     "@types/node": "^16.11.1",
-    "mongodb": "^4.1.3"
+    "mongodb": "^4.1.3",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {}
 }
